# cad-uv-mapping

./: .gitignore  CMakeLists.txt  README.md  environment.yml  notes  pyproject.toml
cpp/include/cad_uv_map/: compat.hpp  face_info.hpp  indexed_record.hpp  mapping.hpp  mapping_context.hpp  mapping_types.hpp  numpy_exports.hpp  occt_io.hpp  pipeline.hpp  sample.hpp  surface_eval.hpp
cpp/src/: bindings.cpp  compat.cpp  face_info.cpp  mapping.cpp  numpy_exports.cpp  occt_io.cpp  sample.cpp
cpp/src/geom/: DistShapeShape.cpp  DistShapeShape.hpp  PointFaceProjector.cpp  PointFaceProjector.hpp  RayFaceIntersector.cpp  RayFaceIntersector.hpp  ShapeIntersector.cpp  ShapeIntersector.hpp  SurfaceAdaptor.cpp  SurfaceAdaptor.hpp
cpp/src/projection/: mapping_projection.cpp  mapping_projection.hpp  projection_nearest.cpp  projection_ray.cpp
docs/: api_reference.md  github_issue_thread_safety.md  how_to_reproduce_tests.md  mapping_model.md  naming_todo.md  projection_fix_proposal.md  ray_face_intersector.md  structure.md  test_cases.md  test_flows.md  testing_checklist.md  thread_safety_investigation.md  thread_safety_plan.md
notebooks/: README.md  visualize_test_cases.ipynb
python/cad_uv_map/: __init__.py  api.py  baking.py  conversions.py  results.py  types.py
report/: native_numpy_batch_round_trip_report.md
tests/fixtures/: cad_cases.py  cad_reference_baking.py  reference_baking.py  reference_mapping.py
tests/python/: test_baking.py  test_cad_reference_baking.py  test_import.py  test_native_mapping.py  test_reference_baking.py  test_reference_method_comparison.py  test_thread_safety.py
tools/: debug_native_faces.py  debug_native_mapping.py  debug_native_uv_samples.py  generate_cad_fixtures.py
